correct align-center in file home

--- a/src/home/styles.css
+++ b/src/home/styles.css
@@ -17,6 +17,7 @@
 }
 .container-tools h2{
   color: var(--color-primary);
+  text-align: center
 }
 
 @media (min-width: 768px) {
@@ -28,6 +29,6 @@
 @media (min-width: 1024px) {
   .container-tools h2{
     font-size: var(--text-desktop-title);
-    text-align: center;
+   
   }
 }
